--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
+    "git-env": "yarn add --dev gh-pages && ./node_modules/.bin/gh-pages -d build",
+    "git-add": "yarn build && git push origin main",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
